// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Django Application -- Default 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": Object {
      "annotations": Object {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::TEST_AWS_ACCOUNT_ID:role/RELEASE_NAME",
      },
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAINS",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/platform:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "platform.pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-platform",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "platform.pennlabs.org",
          ],
          "secretName": "platform-pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "platform-pennlabs-org",
      },
      "name": "platform-pennlabs-org",
    },
    "spec": Object {
      "dnsNames": Array [
        "platform.pennlabs.org",
        "*.platform.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "platform-pennlabs-org-tls",
    },
  },
]
`;

exports[`Django Application -- Duplicate Env 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAIN",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DOMAINS",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/platform:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "platform.pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-platform",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "platform.pennlabs.org",
          ],
          "secretName": "pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennlabs-org",
      },
      "name": "pennlabs-org",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;

exports[`Django Application -- Example 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "SOME_ENV",
                  "value": "environment variables are cool",
                },
                Object {
                  "name": "DOMAINS",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/platform:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 8080,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "platform.pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-platform",
                    "port": Object {
                      "number": 8080,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "platform.pennlabs.org",
          ],
          "secretName": "pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennlabs-org",
      },
      "name": "pennlabs-org",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;

exports[`Django Application -- Feature Branch Deploy 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": Object {
      "annotations": Object {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::TEST_AWS_ACCOUNT_ID:role/RELEASE_NAME",
      },
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAINS",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "IS_FEATURE_BRANCH",
                  "value": "true",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/platform:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "platform.pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-platform",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "platform.pennlabs.org",
          ],
          "secretName": "platform-pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "platform-pennlabs-org",
      },
      "name": "platform-pennlabs-org",
    },
    "spec": Object {
      "dnsNames": Array [
        "platform.pennlabs.org",
        "*.platform.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "platform-pennlabs-org-tls",
    },
  },
]
`;

exports[`Django Application -- Undefined Domains Chart 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-platform",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAIN",
                  "value": "platform.pennlabs.org",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/platform:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
]
`;

exports[`React Application -- Default 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
                Object {
                  "name": "PORT",
                  "value": "80",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/penn-clubs-frontend:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-react",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennclubs-com",
      },
      "name": "pennclubs-com",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
]
`;

exports[`React Application -- Duplicate Env 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
                Object {
                  "name": "PORT",
                  "value": "80",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/penn-clubs-frontend:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-react",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennclubs-com",
      },
      "name": "pennclubs-com",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
]
`;

exports[`React Application -- Example 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 8080,
          "targetPort": 8080,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "SOME_ENV",
                  "value": "environment variables are cool",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
                Object {
                  "name": "PORT",
                  "value": "8080",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/penn-clubs-frontend:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 8080,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-react",
                    "port": Object {
                      "number": 8080,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennclubs-com",
      },
      "name": "pennclubs-com",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
]
`;

exports[`React Application -- Feature Branch Deploy 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
                Object {
                  "name": "PORT",
                  "value": "80",
                },
                Object {
                  "name": "IS_FEATURE_BRANCH",
                  "value": "true",
                },
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/penn-clubs-frontend:TAG_FROM_CI",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-react",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "RELEASE_NAME-react",
                    "port": Object {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1",
    "kind": "Certificate",
    "metadata": Object {
      "finalizers": Array [
        "kubernetes",
      ],
      "labels": Object {
        "app.kubernetes.io/component": "certificate",
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "pennclubs-com",
      },
      "name": "pennclubs-com",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
]
`;

exports[`Redis Application -- Default 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-redis",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-redis",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-redis",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-redis",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "redis:6.0",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
]
`;

exports[`Redis Application -- Example 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-redis",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6380,
          "targetPort": 6380,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": Object {
      "annotations": Object {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::TEST_AWS_ACCOUNT_ID:role/RELEASE_NAME",
      },
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-redis",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-redis",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-redis",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-redis",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "custom-redis-image:5.0",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 6380,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
]
`;

exports[`Tag Override 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-serve",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "app.kubernetes.io/name": "RELEASE_NAME-serve",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/managed-by": "kittyhawk",
        "app.kubernetes.io/name": "RELEASE_NAME-serve",
        "app.kubernetes.io/part-of": "RELEASE_NAME",
        "app.kubernetes.io/version": "TAG_FROM_CI",
      },
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/name": "RELEASE_NAME-serve",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/name": "RELEASE_NAME-serve",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "GIT_SHA",
                  "value": "TAG_FROM_CI",
                },
              ],
              "image": "pennlabs/website:latest",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
          "volumes": Array [],
        },
      },
    },
  },
]
`;
